<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QCView</string>
    <string name="title_activity_quickcirclemod_settings" translatable="false">@string/app_name</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="apply_theme">Apply theme</string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="active_theme">Active Theme</string>
    <string name="no_watchfaces">No Watchfaces installed\nUse the import button to import new watchfaces</string>
    <string name="err_no_xml">Zip file doesn\'t contain a clock.xml</string>
    <string name="err_invalid_xml">clock.xml is not valid</string>
    <string name="err_read_error">Error reading file or file is not a zip file</string>
    <string name="err_missing_file">A replaced file is not present in the zip</string>
    <string name="err_import">Import error</string>
    <string name="customize_theme">Customize</string>
    <string name="title_activity_first_start" translatable="false">@string/app_name</string>
    <string name="firststart_text">QuickCircle View can display your Notifications inside the QuickCircle case, please give us Notification Access, if you want to use this feature.
    Root access is mandatory for QuickCircle View to work</string>
    <string name="call_swipe_icon">Swipe an icon\nin any direction</string>
    <string name="call_incoming">Incoming Call…</string>
    <string name="call_outgoing">Outgoing Call…</string>
    <string name="open_weather_maps_app_id" translatable="false">a03eaa803b1990723b4efda13bf8c99b</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="turn_off_gps">You can turn off gps now</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-7771236778170653/7993956321</string>
    <string name="service_running">Smartcover service is running</string>
    <string name="selinux_dialog_title">SELinux mode</string>
    <string name="selinux_dialog_content">QCView needs SELinux mode set to permissive.\nDo you want to enable permissive mode?</string>
    <string name="pref_title_auto_update">Automatic Updates</string>
    <string name="pref_description_auto_update">Check for updates regularly and notify about found updates.</string>
    <string name="pref_title_check_for_update">Check for updates</string>
    <string name="install_update">Install Update?</string>
    <!--Install update-->
    <string name="update_yes">Install</string>
    <!--ignore update-->
    <string name="update_no">Ignore</string>
    <string name="update_dialog_title">Install Update?</string>
    <string name="update_network_error">Error getting update information</string>
    <string name="update_found">Update available. Click to Download.</string>
    <string name="update_download">Downloading update</string>
    <string name="update_download_error">Error downloading update</string>
</resources>
