<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.bigboot.qcthemer.QuickcirclemodSettings">

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light" />


    <RelativeLayout android:layout_width="match_parent"
        android:id="@+id/layout_root"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewpager_wrapper"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@android:color/background_light">

            <com.viewpagerindicator.CirclePageIndicator
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:id="@+id/pageIndicator"
                android:layout_centerHorizontal="true"
                app:fillColor="#ff33b5e5"
                app:pageColor="#FF777777"
                app:strokeColor="#FF000000"
                app:strokeWidth="0dp"
                android:layout_alignParentTop="false" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/lblTitle"
                android:layout_above="@+id/layout_apply">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/author"
                        android:id="@+id/lblAuthor"
                        android:textStyle="bold"
                        android:layout_toStartOf="@+id/lblDescriptionContent"
                        android:gravity="right"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/description"
                        android:id="@+id/lblDescription"
                        android:textStyle="bold"
                        android:layout_below="@+id/lblAuthor"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/lblDescriptionContent"
                        android:layout_alignTop="@+id/lblDescription"
                        android:layout_toEndOf="@+id/lblDescription"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="3dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/lblAuthorContent"
                        android:layout_toRightOf="@+id/lblAuthor"
                        android:layout_marginStart="3dp"
                        android:layout_alignTop="@+id/lblAuthor"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/layout_apply">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply_theme"
                        android:id="@+id/apply_theme"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/active_theme"
                        android:id="@+id/applied"
                        android:textColor="@android:color/holo_green_dark"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center_vertical" />
                </FrameLayout>

                <Button
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customize_theme"
                    android:id="@+id/customize_theme"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/lblTitle"
                android:gravity="center"
                android:layout_below="@+id/pageIndicator"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="25dp" />

        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/viewpager_wrapper">

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="@dimen/config_circle_diameter"
                android:id="@+id/viewpager"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/shadow_top" />

            <View android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/shadow_bottom"
                android:layout_gravity="bottom" />

            <com.getbase.floatingactionbutton.AddFloatingActionButton
                android:id="@+id/add_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="?android:attr/colorPrimary"
                android:layout_gravity="bottom|right" />

        </FrameLayout>


    </RelativeLayout>
    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_watchfaces"
        android:id="@+id/lblEmpty"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />
</RelativeLayout>
